8143571: [JVMCI] Double unregistering of nmethod during unloading

Reviewed-by: iveresov, twisti